--- a/test/app/index.html
+++ b/test/app/index.html
@@ -1,11 +1,25 @@
 <html>
   <head>
     <script src='lib/js-class-diagrams.js'></script>
-    <link rel='stylesheet' type='text/css' href='styles/js-class-diagrams.css'>
+    <script src='bower_components/jquery/dist/jquery.js'></script>
+    <script src='bower_components/bootstrap/dist/js/bootstrap.js'></script>
+    <script src='bower_components/d3/d3.js'></script>
+    <script src='bower_components/d3/d3.js'></script>
+    <script src='bower_components/jsoneditor/jsoneditor.js'></script>
+    <script src='src/test.js'></script>
+
+    <link rel='stylesheet' type='text/css' href='bower_components/bootstrap/dist/css/bootstrap.css'>
+    <link rel='stylesheet' type='text/css' href='bower_components/jsoneditor/jsoneditor.css'>
+    <link rel='stylesheet' type='text/css' href='lib/js-class-diagrams.css'>
+    <link rel='stylesheet' type='text/css' href='styles/test.css'>
   </head>
   <body>
-    <h1>
-      HELLOs
-    </h1>
+    <div class='row'>
+      <div class='col-md-3'>
+        <div id='spec'></div>
+      </div>
+      <div class='col-md-9'>
+      </div>
+    </div>
   </body>
 </html>
