Hooked up rendering logic for spec

--- a/test/app/index.html
+++ b/test/app/index.html
@@ -16,9 +16,10 @@
   <body>
     <div class='row'>
       <div class='col-md-3'>
-        <div id='spec'></div>
+        <div id='spec' class='jsonblock'></div>
       </div>
       <div class='col-md-9'>
+        <div id='specDiagram' class='diagram'></div>
       </div>
     </div>
   </body>
