Added JCD spec to test runner

--- a/test/app/index.html
+++ b/test/app/index.html
@@ -22,5 +22,13 @@
         <div id='specDiagram' class='diagram'></div>
       </div>
     </div>
+    <div class='row'>
+      <div class='col-md-3'>
+        <div id='jcd' class='jsonblock'></div>
+      </div>
+      <div class='col-md-9'>
+        <div id='jcdDiagram' class='diagram'></div>
+      </div>
+    </div>
   </body>
 </html>
