--- a/test/app/index.html
+++ b/test/app/index.html
@@ -5,6 +5,8 @@
     <script src='bower_components/d3/d3.js'></script>
     <script src='bower_components/d3/d3.js'></script>
     <script src='bower_components/jsoneditor/jsoneditor.js'></script>
+    <script src='bower_components/underscore/underscore.js'></script>
+    <script src='bower_components/backbone/backbone.js'></script>
     <script src='lib/js-class-diagrams.js'></script>
     <script src='src/test.js'></script>
 
