Finished porting tests to browser

--- a/test/app/spec.html
+++ b/test/app/spec.html
@@ -19,7 +19,7 @@
     <link rel='stylesheet' type='text/css' href='lib/js-class-diagrams/js-class-diagrams.css'>
 
     <script src='test/parser.js'></script>
-    <!-- <script src='test/renderer.js'></script> -->
+    <script src='test/renderer.js'></script>
 
   </head>
   <body>
